--- a/index.html
+++ b/index.html
@@ -79,5 +79,12 @@
 			<p>취업 준비를 하는 학생들은 이력서와 자기소개서를 작성하고, 면접을 대비하는 등의 과정이 필요하다. 이를 위해서는 기업 정보를 수집하고, 취업 지원이 가능한 기간과 방법을 미리 파악해두는 것이 좋다.<br><br>인턴십을 신청하는 학생들은 회사나 기관의 지원 기간과 방법을 파악하고, 자신이 원하는 분야의 인턴십 정보를 찾아보는 것이 중요하다. 인턴십 지원에는 자기소개서와 면접 과정이 필요하므로, 이를 준비하는 것도 중요하다.<br><br>교환학생으로 가는 학생들은 교환학교 선정과 지원서 작성, 비자 신청 등의 과정이 필요하다. 교환학생 지원은 일반적으로 1년 전에 시작된다. 따라서 봄은 교환학생으로 나가기 전 준비를 위한 과정을 마무리하는 시기이다.<br><br>여행을 계획하는 학생들은 여행지 선정과 예산 관리, 숙소 예약, 교통편 예약 등의 과정이 필요하다.</p>
 		</div>
 	</div>
+	<script src="https://utteranc.es/client.js"
+        repo="jaeyoung8008/jaeyoung8008.github.io"
+        issue-term="pathname"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+	</script>
 </body>
 </html>
