--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
 	</style>
 </head>
 <body>
+	<a href="/self">
+    		<h2>이 링크를 클릭해 보세요!</h2>
+	</a>
 	<header class="header">
 		<h1>봄교정의 인상적인 모습</h1>
 	</header>
