--- a/self.html
+++ b/self.html
@@ -52,7 +52,8 @@
 		}
 		
 		.post {
-			margin-left: 120px;
+			margin-left: 200px;
+			margin-right: 200px;
 			background-color: #f9f9f9;
 			border: 1px solid #ccc;
 			margin-bottom: 20px;
